# Sensebase

./: .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  ctl.sh  pyproject.toml  requirements.txt  setup.sh
config/: github.example.yaml  gitlab.example.yaml  local.example.yaml
docs/: index.html
src/: __init__.py  main.py
src/analyzers/: __init__.py  base.py  registry.py
src/api/: __init__.py  crawl_manager.py  server.py
src/crawler/: __init__.py  github_client.py  gitlab_client.py  models.py  repo_manager.py
src/extractors/: __init__.py  config.py  go.py  java.py  javascript.py  llm_extractor.py  python.py  relationship_extractor.py  repo_prep.py  schema.py
src/query/: __init__.py  embeddings.py  search.py
src/store/: __init__.py  knowledge_base.py  output.py
src/webapp/: index.html
src/webapp/static/css/: app.css
src/webapp/static/js/: api.js  app.js
src/webapp/static/js/pages/: apis.js  contexts.js  crawl.js  dashboard.js  dataflows.js  dependencies.js  graph.js  relationships.js  schemas.js  search.js  services.js  settings.js  sources.js
tests/: conftest.py  test_analyzers.py  test_knowledge_base.py  test_search.py
